--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="local_network_pulp" name="local_network">
       <label class="form-check-label" for="local_network_pulp">Наличие локальной сети</label>
+      </div> 
  <div class="mb-3">
     <label class="form-label" for="installation_location_pulp">Местонахождение установки</label>
     <input type="text" class="form-control mb-2" id="installation_location_pulp" name="installation_location_pulp">
