--- a/index.html
+++ b/index.html
@@ -490,31 +490,33 @@ function submitForm() {
     return;
   }
 
-  // ВСТАВКА ИЗОБРАЖЕНИЯ В PDF временно
   let tempImgWrapper = null;
-  if (photoInput && photoInput.dataset.jpeg && photoInput.dataset.jpeg.startsWith("data:image/jpeg")) {
-    const img = document.createElement("img");
-    img.src = photoInput.dataset.jpeg;
-    img.style.maxWidth = "100%";
-    img.style.marginTop = "10px";
+  let loadImagePromise = Promise.resolve();
 
-    tempImgWrapper = document.createElement("div");
-    tempImgWrapper.appendChild(img);
-    pdfContent.appendChild(tempImgWrapper);
+  if (photoInput && photoInput.dataset.jpeg && photoInput.dataset.jpeg.startsWith("data:image/jpeg")) {
+    loadImagePromise = new Promise((resolve) => {
+      const img = new Image();
+      img.onload = resolve;
+      img.onerror = resolve; // continue even if it fails
+      img.src = photoInput.dataset.jpeg;
+      img.style.maxWidth = "100%";
+      img.style.marginTop = "10px";
+
+      tempImgWrapper = document.createElement("div");
+      tempImgWrapper.appendChild(img);
+      pdfContent.appendChild(tempImgWrapper);
+    });
   }
 
-  html2pdf().set({
-    filename: 'oprosny_list.pdf',
-    html2canvas: { scale: 2, useCORS: true },  // <-- Важно для загрузки изображений
-    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+  loadImagePromise.then(() => {
+    return html2pdf().set({
+      filename: 'oprosny_list.pdf',
+      html2canvas: { scale: 2, useCORS: true },
+      jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+    }).from(pdfContent).outputPdf('blob');
   })
-  .from(pdfContent)
-  .outputPdf('blob')
   .then(function (pdfBlob) {
-    // удаляем изображение после генерации
-    if (tempImgWrapper) {
-      tempImgWrapper.remove();
-    }
+    if (tempImgWrapper) tempImgWrapper.remove();
 
     const file = new File([pdfBlob], "oprosny_list.pdf", { type: "application/pdf" });
     const formData = new FormData();
@@ -552,6 +554,7 @@ function submitForm() {
     alert("Ошибка отправки: " + error.message);
   });
 }
+
 </script>
 
 
