--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
 </form>
 
 
+<iframe id="pdf-preview" style="width: 100%; height: 500px; margin-top: 20px; display: none;"></iframe>
 
     
 <script>
@@ -473,6 +474,7 @@ function bindPhotoPreview(section) {
 function submitForm() {
   const form = document.getElementById("form");
   const pdfContent = document.getElementById("pdf-content");
+  const pdfPreview = document.getElementById("pdf-preview");
 
   const material = form.material.value;
   const photoInput = document.getElementById(`installation_photo_${material}`);
@@ -517,6 +519,18 @@ function submitForm() {
 
   prepareImageCanvas()
     .then(() => {
+      // Сначала покажем предпросмотр PDF
+      return html2pdf().set({
+        html2canvas: { scale: 2, useCORS: true },
+        jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+      }).from(pdfContent).output('datauristring');
+    })
+    .then((pdfDataUri) => {
+      // Показываем в iframe
+      pdfPreview.src = pdfDataUri;
+      pdfPreview.style.display = 'block';
+
+      // Генерируем файл
       return html2pdf().set({
         filename: 'oprosny_list.pdf',
         html2canvas: { scale: 2, useCORS: true },
@@ -524,7 +538,7 @@ function submitForm() {
       }).from(pdfContent).outputPdf('blob');
     })
     .then((pdfBlob) => {
-      if (imageCanvas) imageCanvas.remove(); // удаляем canvas из DOM
+      if (imageCanvas) imageCanvas.remove(); // удаляем canvas после генерации
       const file = new File([pdfBlob], "oprosny_list.pdf", { type: "application/pdf" });
       const formData = new FormData();
       formData.append("file", file);
@@ -549,6 +563,8 @@ function submitForm() {
         time: new Date().toLocaleString(),
         pdf_link: link
       };
+
+      // Отправка через EmailJS
       return emailjs.send("service_1rnpxea", "template_sk137ts", templateParams);
     })
     .then(() => {
