--- a/index.html
+++ b/index.html
@@ -493,44 +493,35 @@ function submitForm() {
     return;
   }
 
-  let imageCanvas = null;
+  let imageNode = null;
 
-  const prepareImageCanvas = () => {
+  const prepareImageNode = () => {
     return new Promise((resolve) => {
       if (!imageData) return resolve();
 
-      const img = new Image();
-      img.onload = () => {
-        const canvas = document.createElement("canvas");
-        canvas.width = img.width;
-        canvas.height = img.height;
-        const ctx = canvas.getContext("2d");
-        ctx.drawImage(img, 0, 0);
-        canvas.style.maxWidth = "100%";
-        canvas.style.marginTop = "10px";
-        imageCanvas = canvas;
-        pdfContent.appendChild(canvas);
-        resolve();
-      };
-      img.onerror = resolve;
+      const img = document.createElement("img");
       img.src = imageData;
+      img.style.maxWidth = "100%";
+      img.style.marginTop = "10px";
+      pdfContent.appendChild(img);
+      imageNode = img;
+      resolve();
     });
   };
 
-  prepareImageCanvas()
+  prepareImageNode()
     .then(() => {
-      // Сначала покажем предпросмотр PDF
+      // Предпросмотр PDF
       return html2pdf().set({
         html2canvas: { scale: 2, useCORS: true },
         jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
       }).from(pdfContent).output('datauristring');
     })
     .then((pdfDataUri) => {
-      // Показываем в iframe
       pdfPreview.src = pdfDataUri;
       pdfPreview.style.display = 'block';
 
-      // Генерируем файл
+      // Генерация финального PDF-файла
       return html2pdf().set({
         filename: 'oprosny_list.pdf',
         html2canvas: { scale: 2, useCORS: true },
@@ -538,7 +529,7 @@ function submitForm() {
       }).from(pdfContent).outputPdf('blob');
     })
     .then((pdfBlob) => {
-      if (imageCanvas) imageCanvas.remove(); // удаляем canvas после генерации
+      if (imageNode) imageNode.remove(); // удаляем изображение после генерации
       const file = new File([pdfBlob], "oprosny_list.pdf", { type: "application/pdf" });
       const formData = new FormData();
       formData.append("file", file);
@@ -564,7 +555,6 @@ function submitForm() {
         pdf_link: link
       };
 
-      // Отправка через EmailJS
       return emailjs.send("service_1rnpxea", "template_sk137ts", templateParams);
     })
     .then(() => {
@@ -575,9 +565,8 @@ function submitForm() {
       alert("Ошибка отправки: " + error.message);
     });
 }
-
-
 </script>
+
 
 
 
